@@ -1,0 +1,30 @@
+Filter Settings file
+
+Room EQ V5,01
+Dated: 16.05.2013 21:56:38
+
+Notes:This file demonstrates all filter types the Generic equalizer supports
+
+Equaliser: Generic
+No measurement
+Filter  1: ON  PK       Fc    50,0 Hz  Gain -10,0 dB  Q  2,50
+Filter  2: ON  Modal    Fc     100H z  Gain   3,0 dB  Q  5,41  T60 target   100 ms
+Filter  3: ON  LP       Fc   8.000 Hz
+Filter  4: ON  HP       Fc    30,0 Hz
+Filter  5: ON  LPQ      Fc  10.000 Hz  Q  0,400
+Filter  6: ON  HPQ      Fc    20,0 Hz  Q  0,500
+Filter  7: ON  LS       Fc     300 Hz  Gain   5,0 dB
+Filter  8: ON  HS       Fc   1.000 Hz  Gain  -3,0 dB
+Filter  9: ON  LS 12dB  Fc   2.000 Hz  Gain  -5,0 dB
+Filter 10: ON  HS 12dB  Fc     500 Hz  Gain   5,0 dB
+Filter 11: ON  LS 6dB   Fc    50,0 Hz  Gain   7,2 dB
+Filter 12: ON  HS 6dB   Fc  12.000 Hz  Gain  10,0 dB
+Filter 13: ON  NO       Fc     800 Hz
+Filter 14: ON  AP       Fc     900 Hz  Q  0,707
+Filter 15: ON  None   
+Filter 16: ON  None   
+Filter 17: ON  None   
+Filter 18: ON  None   
+Filter 19: ON  None   
+Filter 20: ON  None   
+
