@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.1 ===
+- Better support of RoomEqWizard ill-formed files.
 
 === 1.0.0 ===
 * Improved expr::format functions: extended format specifiers.
